Basic POST request w axios setup to shortener api, not ready for PROD

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,9 @@
   z-index:9999; 
 }
 
+.local-max-width-alert { 
+  max-width: 1440px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
